[package]
name = "soro_gps"
version = "0.2.0"
edition = "2021"

description = "Bindings to the Sooner Rover Team's `gps` library"
repository = "https://github.com/Sooner-Rover-Team/gps-rs"
homepage = "https://github.com/Sooner-Rover-Team"
license = "MIT"
categories = ["science::robotics", "api-bindings"]
keywords = ["soro", "sooner-rover-team", "urc", "mars", "rover"]
readme = "README.md"


[lib]
crate-time = ["staticlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pisserror = "0.3.0-rc.2"
tracing = "0.1.41"
pyo3 = { version = "0.23.4", optional = true, features = ["extension-module"] }

[build-dependencies]
bindgen = "0.71"
cc = "1.2"

## python build configuration
[tool.maturin]
bindings = "pyo3"
features = ["python"]

[dev-dependencies]
tracing-subscriber = "0.3.19"
