[package]
name = "soro_gps"
version = "1.0.0"
edition = "2021"

description = "A new `gps` library for our old GPS"
repository = "https://github.com/Sooner-Rover-Team/soro_gps"
homepage = "https://github.com/Sooner-Rover-Team"
license = "MIT"
categories = ["science::robotics"]
keywords = ["soro", "sooner-rover-team", "urc", "mars", "rover"]
readme = "README.md"


[lib]
crate-time = ["staticlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pisserror = "0.3.0-rc.2"
tracing = "0.1.41"
pyo3 = { version = "0.23.4", optional = true, features = ["extension-module"] }


## python build configuration
[tool.maturin]
bindings = "pyo3"
features = ["python"]

[dev-dependencies]
tracing-subscriber = "0.3.19"
